test/corpus/blocks.txt
================================================================================
Simple block
================================================================================

{block content}
  Hello, world!
{/block}

--------------------------------------------------------------------------------

(document
  (block
    (block_start)
    (text)
    (block_end)))

================================================================================
Nested blocks
================================================================================

{block outer}
  {block inner}
    Nested!
  {/block}
{/block}

--------------------------------------------------------------------------------

(document
  (block
    (block_start)
    (block
      (block_start)
      (text)
      (block_end))
    (block_end)))

================================================================================
Foreach with else
================================================================================

{foreach $items as $item}
  <li>{$item}</li>
{else}
  <p>No items</p>
{/foreach}

--------------------------------------------------------------------------------

(document
  (loop_block
    (loop_start)
    (element
      (start_tag
        (tag_name))
      (latte_variable
        (php_only
          (identifier)))
      (end_tag
        (tag_name)))
    (else_block
      (else_start)
      (element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name))))
    (loop_end)))

================================================================================
Capture block
================================================================================

{capture $output}
  <div>Some content</div>
{/capture}

--------------------------------------------------------------------------------

(document
  (capture_tag
    (php_variable
      (identifier))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))))
