test/corpus/comments.txt
================================================================================
Simple Latte comment
================================================================================

{* This is a comment *}

--------------------------------------------------------------------------------

(document
  (comment))

================================================================================
Comment inside block
================================================================================

{if $foo}
  {* inside block *}
{/if}

--------------------------------------------------------------------------------

(document
  (if_block
    open: (directive_start)
    condition: (php_only)
    (comment)
    close: (directive_end)))
