test/corpus/conditionals.txt
================================================================================
If-Elseif-Else
================================================================================

{if $foo}
  Foo!
{elseif $bar}
  Bar!
{else}
  Baz!
{/if}

--------------------------------------------------------------------------------

(document
  (if_block
    open: (directive_start)
    condition: (php_only)
    (text)
    (elseif_block
      (directive_start)
      condition: (php_only)
      (text))
    (else_block
      (else_start)
      (text))
    close: (directive_end)))

================================================================================
Ifset Block
================================================================================

{ifset $footer}
  <footer>{$footer}</footer>
{/ifset}

--------------------------------------------------------------------------------

(document
  (if_block
    open: (directive_start)
    condition: (php_only)
    (element
      (start_tag
        (tag_name))
      (latte_variable
        (php_only))
      (end_tag
        (tag_name)))
    close: (directive_end)))

================================================================================
If with comparison expression
================================================================================

{if $post->status === Status::Published}
  <p>Published</p>
{/if}

--------------------------------------------------------------------------------

(document
  (if_block
    open: (directive_start)
    condition: (php_only)
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    close: (directive_end)))

================================================================================
If with function call
================================================================================

{if count($posts) > 0}
  <ul>
    {foreach $posts as $post}
      <li>{$post}</li>
    {/foreach}
  </ul>
{/if}

--------------------------------------------------------------------------------

(document
  (if_block
    open: (directive_start)
    condition: (php_only)
    (element
      (start_tag
        (tag_name))
      (loop_block
        open: (directive_start)
        content: (php_only)
        (element
          (start_tag
            (tag_name))
          (latte_variable
            (php_only))
          (end_tag
            (tag_name)))
        close: (directive_end))
      (end_tag
        (tag_name)))
    close: (directive_end)))

================================================================================
For loop
================================================================================

{for $i = 0; $i < 10; $i++}
  <p>Item {$i}</p>
{/for}

--------------------------------------------------------------------------------

(document
  (loop_block
    open: (directive_start)
    content: (php_only)
    (element
      (start_tag
        (tag_name))
      (text)
      (latte_variable
        (php_only))
      (end_tag
        (tag_name)))
    close: (directive_end)))

================================================================================
While loop
================================================================================

{while $condition}
  <p>Processing...</p>
{/while}

--------------------------------------------------------------------------------

(document
  (loop_block
    open: (directive_start)
    content: (php_only)
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    close: (directive_end)))

================================================================================
Switch statement
================================================================================

{switch $status}
  {case 'active'}
    <span>Active</span>
  {case 'inactive'}
    <span>Inactive</span>
  {default}
    <span>Unknown</span>
{/switch}

--------------------------------------------------------------------------------

(document
  (switch_block
    open: (directive_start)
    expression: (php_only)
    (case_block
      (directive_start)
      value: (php_only)
      (element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name))))
    (case_block
      (directive_start)
      value: (php_only)
      (element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name))))
    (default_case_block
      (default_start)
      (element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name))))
    close: (directive_end)))
