test/corpus/html-latte.txt
================================================================================
Latte in HTML attribute
================================================================================

<input value="{$foo}">

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (latte_expression))))))

================================================================================
HTML inside Latte block
================================================================================

{if $foo}
  <span>Bar</span>
{/if}

--------------------------------------------------------------------------------

(document
  (if_block
    open: (if_start
      condition: (php_only))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    close: (if_end)))

================================================================================
Foreach with variable in HTML
================================================================================

{foreach $items as $item}
  <li>{$item}</li>
{/foreach}

--------------------------------------------------------------------------------

(document
  (loop_block
    open: (loop_start
      content: (php_only))
    (element
      (start_tag
        (tag_name))
      (latte_variable
        name: (identifier))
      (end_tag
        (tag_name)))
    close: (loop_end)))
