test/corpus/macros.txt
================================================================================
Macro definition and usage
================================================================================

{macro greet($name)}
  Hello, world!
{/macro}

{greet 'Latte'}

--------------------------------------------------------------------------------

(document
  (block
    open: (directive_start)
    (text)
    close: (directive_end))
  (text)
  (macro_call
    name: (macro_name)
    arguments: (macro_arguments)))

================================================================================
Macro call with uppercase identifier
================================================================================

{CustomMacro argument}

--------------------------------------------------------------------------------

(document
  (macro_call
    name: (macro_name)
    arguments: (macro_arguments)))

================================================================================
Macro call with lowercase identifier
================================================================================

{mytag 'tag', [key: 'value'], $myvar}

--------------------------------------------------------------------------------

(document
  (macro_call
    name: (macro_name)
    arguments: (macro_arguments)))

================================================================================
Macro call without arguments
================================================================================

{CustomMacro}

--------------------------------------------------------------------------------

(document
  (macro_call
    name: (macro_name)))

================================================================================
Macro call with string argument
================================================================================

{CustomMacro 'value'}

--------------------------------------------------------------------------------

(document
  (macro_call
    name: (macro_name)
    arguments: (macro_arguments)))

================================================================================
Macro call with multiple arguments
================================================================================

{CustomMacro arg1 arg2 'string'}

--------------------------------------------------------------------------------

(document
  (macro_call
    name: (macro_name)
    arguments: (macro_arguments)))
