test/corpus/single-tags.txt
================================================================================
Parameters tag
================================================================================

{parameters int $id, string $name}

--------------------------------------------------------------------------------

(document
  (macro_call
    name: (macro_name)
    arguments: (macro_arguments)))

================================================================================
ContentType tag
================================================================================

{contentType application/json}

--------------------------------------------------------------------------------

(document
  (macro_call
    name: (macro_name)
    arguments: (macro_arguments)))

================================================================================
Do tag
================================================================================

{do $x = calculateSomething()}

--------------------------------------------------------------------------------

(document
  (macro_call
    name: (macro_name)
    arguments: (macro_arguments)))

================================================================================
Trace tag
================================================================================

{trace}

--------------------------------------------------------------------------------

(document
  (macro_call
    name: (macro_name)))

================================================================================
Syntax tag
================================================================================

{syntax off}

--------------------------------------------------------------------------------

(document
  (macro_call
    name: (macro_name)
    arguments: (macro_arguments)))

================================================================================
Rollback tag
================================================================================

{rollback}

--------------------------------------------------------------------------------

(document
  (macro_call
    name: (macro_name)))
