test/corpus/tags.txt
================================================================================
Include tag
================================================================================

{include 'header.latte'}

--------------------------------------------------------------------------------

(document
  (latte_file_tag
    tag_name: (file_tag_name)
    file: (file_path (string_literal))))

================================================================================
Include tag with parameters
================================================================================

{include 'component.latte', title: $title, items: $items}

--------------------------------------------------------------------------------

(document
  (latte_file_tag
    tag_name: (file_tag_name)
    file: (file_path (string_literal))
    arguments: (file_tag_arguments
      (file_tag_argument
        name: (identifier)
        value: (expression (php_variable name: (identifier))))
      (file_tag_argument
        name: (identifier)
        value: (expression (php_variable name: (identifier)))))))

================================================================================
Extends tag
================================================================================

{extends 'layout.latte'}

--------------------------------------------------------------------------------

(document
  (latte_file_tag
    tag_name: (file_tag_name)
    file: (file_path (string_literal))))

================================================================================
Layout tag
================================================================================

{layout 'admin.latte'}

--------------------------------------------------------------------------------

(document
  (latte_file_tag
    tag_name: (file_tag_name)
    file: (file_path (string_literal))))

================================================================================
Import tag
================================================================================

{import 'forms.latte'}

--------------------------------------------------------------------------------

(document
  (latte_file_tag
    tag_name: (file_tag_name)
    file: (file_path (string_literal))))

================================================================================
Sandbox tag
================================================================================

{sandbox 'untrusted.latte'}

--------------------------------------------------------------------------------

(document
  (latte_file_tag
    tag_name: (file_tag_name)
    file: (file_path (string_literal))))

================================================================================
Dump tag
================================================================================

{dump $variable}

--------------------------------------------------------------------------------

(document
  (latte_single_tag))

================================================================================
Dump tag without arguments
================================================================================

{dump}

--------------------------------------------------------------------------------

(document
  (latte_single_tag))

================================================================================
Debugbreak tag
================================================================================

{debugbreak}

--------------------------------------------------------------------------------

(document
  (latte_single_tag))

================================================================================
Embed tag
================================================================================

{embed 'template.latte'}
  {block content}
    Override content
  {/block}
{/embed}

--------------------------------------------------------------------------------

(document
  (embed_tag
    (block
      (block_start)
      (text)
      (block_end))))

================================================================================
Var tag with string
================================================================================

{var $name = 'John Doe'}

--------------------------------------------------------------------------------

(document
  (latte_assignment_tag
    (php_variable
      (identifier))
    (expression
      (string_literal))))

================================================================================
Var tag with number
================================================================================

{var $count = 42}

--------------------------------------------------------------------------------

(document
  (latte_assignment_tag
    (php_variable
      (identifier))
    (expression
      (number_literal))))

================================================================================
Var tag with boolean
================================================================================

{var $isActive = true}

--------------------------------------------------------------------------------

(document
  (latte_assignment_tag
    (php_variable
      (identifier))
    (expression
      (boolean_literal))))

================================================================================
Var tag with array
================================================================================

{var $items = [1, 2, 3]}

--------------------------------------------------------------------------------

(document
  (latte_assignment_tag
    (php_variable
      (identifier))
    (expression
      (array_literal
        (expression
          (number_literal))
        (expression
          (number_literal))
        (expression
          (number_literal))))))

================================================================================
Var tag with function call
================================================================================

{var $total = count($items)}

--------------------------------------------------------------------------------

(document
  (latte_assignment_tag
    (php_variable
      (identifier))
    (expression
      (function_call
        (identifier)
        (argument_list
          (expression
            (php_variable
              (identifier))))))))

================================================================================
Default tag
================================================================================

{default $page = 1}

--------------------------------------------------------------------------------

(document
  (latte_assignment_tag
    (php_variable
      (identifier))
    (expression
      (number_literal))))
