test/corpus/type-system.txt
================================================================================
VarType with simple type
================================================================================

{varType string $name}

--------------------------------------------------------------------------------

(document
  (var_type_tag))

================================================================================
VarType with class type
================================================================================

{varType Nette\Security\User $user}

--------------------------------------------------------------------------------

(document
  (var_type_tag))

================================================================================
VarType with array type
================================================================================

{varType App\Model\Entity\Company[] $companies}

--------------------------------------------------------------------------------

(document
  (var_type_tag))

================================================================================
TemplateType declaration
================================================================================

{templateType App\Model\MyTemplate}

--------------------------------------------------------------------------------

(document
  (template_type_tag))

================================================================================
VarType in HTML context
================================================================================

<div>
{varType int $count}
<p>{$count}</p>
</div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name))
    (var_type_tag)
    (element
      (start_tag
        (tag_name))
      (latte_variable
        (identifier))
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

================================================================================
Multiple varType declarations
================================================================================

{varType string $title}
{varType int $id}
{varType array $items}

--------------------------------------------------------------------------------

(document
  (var_type_tag)
  (var_type_tag)
  (var_type_tag))

================================================================================
TemplateType with namespace
================================================================================

{templateType MyApp\Templates\CatalogTemplateParameters}

--------------------------------------------------------------------------------

(document
  (template_type_tag))
